[gd_scene load_steps=5 format=3 uid="uid://dbr1d3ag3is1e"]

[ext_resource type="Texture2D" uid="uid://dcifdlgr6dggr" path="res://assets/sprite/entity/player.png" id="1_3up65"]
[ext_resource type="Script" path="res://script/entity/player.gd" id="1_5nvlc"]
[ext_resource type="PackedScene" uid="uid://mtvxkjh2dgyq" path="res://assets/sprite/entity/entity_data.tscn" id="2_il0wb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_22km4"]
size = Vector2(80, 112)

[node name="Player" type="RigidBody2D"]
collision_layer = 2
can_sleep = false
lock_rotation = true
script = ExtResource("1_5nvlc")

[node name="EntityData" parent="." instance=ExtResource("2_il0wb")]
speed = 40

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -64)
shape = SubResource("RectangleShape2D_22km4")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -64)
scale = Vector2(0.64, 0.64)
texture = ExtResource("1_3up65")

[node name="Entity Area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entity Area"]
position = Vector2(0, -64)
shape = SubResource("RectangleShape2D_22km4")

[connection signal="on_damaged" from="EntityData" to="." method="on_damaged"]
[connection signal="area_entered" from="Entity Area" to="." method="on_area_entered"]
